Various updates to deal with party attributes
