# api/swagger/party/party-api.yaml
@@ -37,8 +37,6 @@ paths:
 
   /parties:
     post:
-      tags:
-      - backstage
       summary: given a sampleUnitType B | H this adds a reporting unit of type Business or Household
       description: Adds a new Party of type sampleUnitType or updates an existing Party based on the reference provided
       security:
@@ -79,8 +77,6 @@ paths:
 
   /parties/type/{sampleUnitType}/ref/{sampleUnitRef}:
     get:
-      tags:
-      - backstage
       summary: Get a Party and any associated parties by its unique reference (ruref for business, uprn for household)
       description: Returns a Party and associated parties
       operationId: getPartyByRef
@@ -122,8 +118,6 @@ paths:
 
   /parties/type/{sampleUnitType}/id/{id}:
     get:
-      tags:
-      - backstage
       summary: Get a Party by its UUID
       description: Returns a single Party
       operationId: getPartyById
@@ -164,9 +158,6 @@ paths:
 
   /businesses/ref/{ref}:
     get:
-      tags:
-      - frontstage
-      - backstage
       summary: Get a Business by its unique business reference
       description: Returns a single Business
       operationId: getBusinessByRef
@@ -198,9 +189,6 @@ paths:
 
   /businesses/id/{id}:
     get:
-      tags:
-      - frontstage
-      - backstage
       summary: Get a Business by its Party ID
       description: Returns a single Party
       operationId: getBusinessById
@@ -229,8 +217,6 @@ paths:
 
   /businesses:
     post:
-      tags:
-      - backstage
       summary: adds a reporting unit of type Business
       description: Adds a new Business, or updates an existing Business based on the business reference provided
       security:
@@ -240,10 +226,8 @@ paths:
       - application/vnd.ons.business+json
       parameters:
       - in: body
-        name: party
+        name: business
         description: Business to add
-        schema:
-          $ref: '#/definitions/business'
       responses:
         200:
           description: item updated
@@ -266,8 +250,6 @@ paths:
 
   /respondents/id/{id}:
     get:
-      tags:
-      - backstage
       summary: Get a Respondent by its Party ID
       description: Returns a single Party
       operationId: getRespondentById
@@ -296,9 +278,6 @@ paths:
 
   /respondents:
     post:
-      tags:
-      - frontstage
-      - backstage
       summary: adds a Respondent
       description: Adds a Respondent to the system
       security:
@@ -374,7 +353,67 @@ definitions:
     description: A dictionary of kv pairs from the sample file.
     properties:
 
-
+  businessCreate:
+    type: object
+    properties:
+      id:
+        type: string
+        format: uuid
+        example: 3b136c4b-7a14-4904-9e01-13364dd7b972
+      businessRef:
+        type: string
+        description: The unique business identifier recognised within ONS (previously referred to as the RU Ref).
+        example: "0123456789"
+      attributes:
+        type: object
+        properties:
+        contactName:
+            type: string
+            example: "John Doe"
+        employeeCount:
+          type: integer
+          example: 50
+        enterpriseName:
+          type: string
+          example: "ABC Limited"
+        facsimile:
+          type: string
+          example: "+44 1234 567890"
+        fulltimeCount:
+          type: integer
+          example: 35
+        legalStatus:
+          type: string
+          enum:
+            - "Community Interest Company (CIC)"
+            - "Charitable Incorporated Organisation (CIO)"
+            - "Industrial and provident society"
+            - "General partnership"
+            - "Limited liability partnership (LLP)"
+            - "Limited partnership (LP)"
+            - "Private Limited Company"
+            - "Public Limited Company"
+            - "Unlimited Company"
+            - "Sole proprietorship"
+          example: "Private Limited Company"
+        name:
+          type: string
+          example: "ABC Limited"
+        sic2003:
+          type: string
+          example: "2520"
+        sic2007:
+          type: string
+          example: "2520"
+        telephone:
+          type: string
+          example: "+44 1234 567890"
+        tradingName:
+          type: string
+          example: "ABC Trading Ltd"
+        turnover:
+          type: integer
+          example: 350
 
   business:
     type: object
